--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.9.0",
     "pg-format": "^1.0.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "web3": "^1.8.2"
   }
 }
