--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -16,6 +16,7 @@
     "@types/morgan": "^1.9.4",
     "axios": "^1.3.3",
     "dotenv": "^16.0.3",
+    "ethereum-input-data-decoder": "^0.4.2",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
