--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "source/server.ts",
   "scripts": {
-    "dev": "nodemon source/server.ts",
+    "devInit": "nodemon source/serverInit.ts",
+    "devListen": "nodemon source/serverListen.ts",
     "build": "rm -rf build/ && prettier --write source/ && tsc"
   },
   "keywords": [],
@@ -22,6 +23,7 @@
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "pg-format": "^1.0.4",
+    "run-func": "^3.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "web3": "^1.8.2"
