--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.9.0",
     "pg-format": "^1.0.4",
     "run-func": "^3.0.0",
+    "sleep": "^6.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "web3": "^1.8.2"
