--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "source/server.ts",
   "engines": {
-    "node": ">=16.17.1"
+    "node": "18.13.0"
   },
   "scripts": {
     "devInit": "nodemon source/serverInit.ts",
