--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "devInit": "nodemon source/serverInit.ts",
     "devListen": "nodemon source/serverListen.ts",
-    "build": "rm -rf build/ && prettier --write source/ && tsc"
+    "build": "rm -rf build/ && tsc",
+    "start": "node serverInit.js"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "sleep": "^6.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "web3": "^1.8.2"
+    "web3": "^1.8.2",
+    "yarn": "^1.22.19"
   }
 }
