--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -2,15 +2,16 @@
   "name": "express",
   "version": "1.0.0",
   "description": "",
-  "main": "source/server.ts",
+  "main": "dist/serverInit.js",
   "engines": {
     "node": "18.13.0"
   },
   "scripts": {
-    "devInit": "nodemon source/serverInit.ts",
-    "devListen": "nodemon source/serverListen.ts",
-    "build": "rm -rf build/ && tsc",
-    "start": "node serverInit.js"
+    "build": "rimraf dist && tsc",
+    "dev": "nodemon source/serverInit.ts",
+    "start": "cross-env NODE_ENV=production node dist/serverInit.js",
+    "prestart": "npm run build",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "axios": "^1.3.3",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "ethereum-input-data-decoder": "^0.4.2",
     "express": "^4.18.2",
@@ -27,6 +29,7 @@
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "pg-format": "^1.0.4",
+    "rimraf": "^4.1.2",
     "run-func": "^3.0.0",
     "sleep": "^6.3.0",
     "ts-node": "^10.9.1",
