--- a/EXPRESS/tsconfig.json
+++ b/EXPRESS/tsconfig.json
@@ -3,7 +3,7 @@
       "forceConsistentCasingInFileNames": true,
       "module": "commonjs",
       "esModuleInterop": true,
-      "outDir": "./build",
+      "outDir": "./dist",
       "rootDir": "./source",
       "target": "es2017",
       "skipLibCheck": true,
