--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/serverInit.js",
   "engines": {
-    "node": "18.13.0"
+    "node": "<=18.13.0"
   },
   "scripts": {
     "build": "rimraf dist && tsc",
