--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "rimraf dist && tsc",
     "dev": "nodemon source/serverInit.ts",
-    "start": "cross-env NODE_ENV=production node dist/serverInit.js",
+    "startInitialize": "cross-env NODE_ENV=production node dist/serverInit.js",
+    "startListen": "cross-env NODE_ENV=production node dist/serverListen.js",
     "prestart": "npm run build",
     "typecheck": "tsc --noEmit"
   },
@@ -28,6 +29,8 @@
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "rimraf": "^4.1.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "web3": "^1.8.2",
