--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "rimraf dist && tsc",
-    "dev": "nodemon source/serverInit.ts",
+    "dev": "nodemon source/serverListen.ts",
     "startInitialize": "cross-env NODE_ENV=production node dist/serverInit.js",
     "startListen": "cross-env NODE_ENV=production node dist/serverListen.js",
     "prestart": "npm run build",
@@ -18,14 +18,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@moralisweb3/common-evm-utils": "^2.16.1",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "alchemy-sdk": "^2.6.2",
     "axios": "^1.3.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "ethers": "^6.1.0",
     "express": "^4.18.2",
+    "moralis": "^2.16.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "rimraf": "^4.1.2",
