--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -23,11 +23,13 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "alchemy-sdk": "^2.6.2",
+    "api": "^5.0.8",
     "axios": "^1.3.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "ethers": "^6.1.0",
     "express": "^4.18.2",
+    "md5": "^2.3.0",
     "moralis": "^2.16.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
