--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -25,6 +25,7 @@
     "alchemy-sdk": "^2.6.2",
     "api": "^5.0.8",
     "axios": "^1.3.3",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "ethers": "^6.1.0",
