--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^6.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "moralis": "^2.16.1",
     "morgan": "^1.10.0",
@@ -43,5 +44,8 @@
     "typescript": "^4.9.5",
     "web3": "^1.8.2",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5"
   }
 }
