--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -21,6 +21,7 @@
     "@moralisweb3/common-evm-utils": "^2.16.1",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.4",
     "alchemy-sdk": "^2.6.2",
     "api": "^5.0.8",
