--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^6.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "moralis": "^2.16.1",
     "morgan": "^1.10.0",
