--- a/EXPRESS/package.json
+++ b/EXPRESS/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.16.1",
+    "@supabase/supabase-js": "^2.38.4",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.5",
@@ -36,6 +37,7 @@
     "moralis": "^2.16.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
+    "node-telegram-bot-api": "^0.64.0",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "rimraf": "^4.1.2",
@@ -45,5 +47,8 @@
     "typescript": "^4.9.5",
     "web3": "^1.8.2",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.63.1"
   }
 }
